--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/cli": "^0.11.20",
+    "@types/next": "^9.0.0",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "eslint": "8.20.0",
